[project]
name = "oneloyal-backend"
version = "0.1.0"
description = "Backend API for the OneLoyal B2B ERP-based gift progress platform."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.13.0,<2.0.0",
    "argon2-cffi>=23.1.0,<26.0.0",
    "asyncpg>=0.29.0,<1.0.0",
    "celery>=5.4.0,<6.0.0",
    "cryptography>=42.0.0,<47.0.0",
    "email-validator>=2.2.0,<3.0.0",
    "fastapi>=0.115.0,<1.0.0",
    "greenlet>=3.0.0,<4.0.0",
    "pyjwt>=2.8.0,<3.0.0",
    "pydantic-settings>=2.4.0,<3.0.0",
    "python-json-logger>=2.0.7,<4.0.0",
    "redis>=5.0.0,<7.0.0",
    "sqlalchemy[asyncio]>=2.0.30,<3.0.0",
    "uvicorn[standard]>=0.30.0,<1.0.0",
]

[dependency-groups]
dev = [
    "aiosqlite>=0.20.0,<1.0.0",
    "httpx>=0.27.0,<1.0.0",
    "pytest>=8.0.0,<9.0.0",
    "pytest-asyncio>=0.23.0,<2.0.0",
    "ruff>=0.6.0,<1.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-q"

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
